stub data returned by weather and image api's

--- a/app/templates/components/my-weather.hbs
+++ b/app/templates/components/my-weather.hbs
@@ -1,1 +1,3 @@
-Hello world with data from index route: {{weatherData}}
+Data from weather api: {{weatherData}}
+<br>
+Data from image api: {{imageData}}
