--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,2 +1,2 @@
-{{my-weather weatherData=model.weatherData.response
-             imageData=model.imageData.response}}
+{{my-weather weatherData=model.weatherData
+             imageData=model.imageData}}
