use stub api server
- this is turning into a mess, this is working, but its really
  ugly
- naming conventions are at least solidifying a bit
- old way of using jsonp works still, just uncomment line in routes/index.js

--- a/app/templates/components/my-weather.hbs
+++ b/app/templates/components/my-weather.hbs
@@ -1,5 +1,7 @@
 <h2>Data from weather api:</h2>
 
+{{weatherData}}
+
 <ul>
   <li>Current Temp: {{temp}}</li>
   <li>Pretty Data: {{prettyDate}}</li>
