--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,2 +1,3 @@
-{{my-weather weatherData=model.weatherData
-             imageData=model.imageData}}
+{{my-weather weatherCurrentData=model.weatherCurrentData.response
+             weatherForcastData=model.weatherForcastData.response
+             imageApiData=model.imageApiData.response}}
