--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,3 @@
-{{my-weather weatherCurrentData=model.weatherCurrentData.response
-             weatherForcastData=model.weatherForcastData.response
-             imageApiData=model.imageApiData.response}}
+{{my-weather weatherCurrentData=weatherCurrentData.response
+             weatherForcastData=weatherForcastData.response
+             imageApiData=imageApiData.response}}
